// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should handle click 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhCb dRiwKL"
    data-testid="Card"
  >
    Test
    <div
      class="absolute flex items-center m-4 space-x-1 -top-1 -right-1"
    />
  </div>
</DocumentFragment>
`;

exports[`Card should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxhCb jCtSzq"
    data-testid="Card"
  >
    <div
      class="absolute flex items-center m-4 space-x-1 -top-1 -right-1"
    />
  </div>
</DocumentFragment>
`;
